--- a/office-admin/src/main/resources/templates/account-details/account-details.html
+++ b/office-admin/src/main/resources/templates/account-details/account-details.html
@@ -33,7 +33,7 @@
                 <i class="ace-icon fa fa-home home-icon"></i>
                 <a href="#">账户明细</a>
             </li>
-            <li class="active">农商行（公账）</li>
+            <li class="active">[[${paymentType.name}]]</li>
         </ul><!-- /.breadcrumb -->
     </div>
 </bc>
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="table-header">
-                            账户明细-苏州农村商业银行（公账）
+                            账户明细-[[${paymentType.name}]]
                         </div>
                         <!-- div.table-responsive -->
 
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                <div id="modal-table" class="modal fade" tabindex="-1">
+                <div id="query-details-modal" class="modal fade" tabindex="-1">
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header no-padding">
@@ -68,74 +68,121 @@
                                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
                                         <span class="white">&times;</span>
                                     </button>
-                                    客户流水发货总览
+                                    凭据详情
                                 </div>
                             </div>
 
                             <div class="modal-body no-padding">
-                                <table class="table table-striped table-bordered table-hover no-margin-bottom no-border-top">
-                                    <thead>
-                                    <tr>
-                                        <th>凭据编号</th>
-                                        <th>日期</th>
-                                        <th>类别</th>
-                                        <th>货主</th>
-                                        <th>摘要</th>
-                                        <th>发货金额</th>
-                                        <th>备注</th>
-                                    </tr>
-                                    </thead>
-
-                                    <tbody>
-                                    <tr>
-                                        <td>0000001</td>
-                                        <td>2019/01/01</td>
-                                        <td>客户</td>
-                                        <td>赵振</td>
-                                        <td>集装箱*3个</td>
-                                        <td>10000.00</td>
-                                        <td>无</td>
-                                    </tr>
-                                    </tbody>
-                                </table>
+                                <form class="form-horizontal" role="form">
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="documentSeq">凭据本数</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="documentSeq"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="documentNo">凭据编号</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="documentNo"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="documentDate">凭据日期</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="documentDate"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="content">摘要</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="content"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="income">收入</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="income"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="expense">支出</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="expense"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="counterpartyInformation">对方信息</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="counterpartyInformation"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="remark">备注</label>
+                                        <div class="col-sm-9">
+                                            <textarea class="col-xs-10" id="remark" readonly="" rows="3"
+                                                      cols="30"></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="category">类别</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="category"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="user">用户</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="user"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="paymentType">付款方式</label>
+                                        <div class="col-sm-9">
+                                            <input readonly="" type="text" class="col-xs-10"
+                                                   id="paymentType"/>
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label class="col-sm-3 control-label no-padding-right"
+                                               for="file">凭据文件</label>
+                                        <div class="col-sm-9">
+                                            <a href="#" class="ace-thumbnails">
+                                                <img width="150" height="150" alt="150x150" src="" />
+                                            </a>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
 
                             <div class="modal-footer no-margin-top">
                                 <button class="btn btn-sm btn-danger pull-left" data-dismiss="modal">
                                     <i class="ace-icon fa fa-times"></i>
-                                    Close
+                                    关闭
                                 </button>
-
-                                <ul class="pagination pull-right no-margin">
-                                    <li class="prev disabled">
-                                        <a href="#">
-                                            <i class="ace-icon fa fa-angle-double-left"></i>
-                                        </a>
-                                    </li>
-
-                                    <li class="active">
-                                        <a href="#">1</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">2</a>
-                                    </li>
-
-                                    <li>
-                                        <a href="#">3</a>
-                                    </li>
-
-                                    <li class="next">
-                                        <a href="#">
-                                            <i class="ace-icon fa fa-angle-double-right"></i>
-                                        </a>
-                                    </li>
-                                </ul>
                             </div>
                         </div><!-- /.modal-content -->
                     </div><!-- /.modal-dialog -->
                 </div>
-
                 <!-- PAGE CONTENT ENDS -->
             </div><!-- /.col -->
         </div><!-- /.row -->
@@ -168,7 +215,8 @@
                     url:/*[[@{/details}]]*/ "",
                     data: {
                         page: page,
-                        pageSize: pageSize
+                        pageSize: pageSize,
+                        payId: /*[[${paymentType.id}]]*/ 0
                     },
                     dataType: "json",
                     success: function (result) {
@@ -246,7 +294,7 @@
                 dataType: 'JSON',
                 success: function (result) {
                     if (result.code === 70001) {
-                        $('#query-or-edit-details-modal').modal();
+                        $('#query-details-modal').modal();
                         data = result.data;
                         $('#documentSeq').val(data.documentSeq);
                         $('#documentNo').val(data.documentNo);
@@ -259,6 +307,7 @@
                         $('#category').val(data.category.name);
                         $('#user').val(data.user.name);
                         $('#paymentType').val(data.paymentType.name);
+
                         console.log(result.data);
                     }
                 }
