--- a/office-admin/src/main/resources/templates/decorators/decorator.html
+++ b/office-admin/src/main/resources/templates/decorators/decorator.html
@@ -459,6 +459,14 @@
             </li>
 
             <li class="">
+                <a th:href="@{/goods/page}">
+                    <i class="menu-icon fa fa-pencil-square-o"></i>
+                    <span class="menu-text"> 发货明细 </span>
+                    <b class="arrow fa fa-angle-down"></b>
+                </a>
+                <b class="arrow"></b>
+            </li>
+            <li class="">
                 <a href="#" class="dropdown-toggle">
                     <i class="menu-icon fa fa-list"></i>
                     <span class="menu-text">发票管理</span>
@@ -482,15 +490,6 @@
                         <b class="arrow"></b>
                     </li>
                 </ul>
-            </li>
-
-            <li class="">
-                <a href="#">
-                    <i class="menu-icon fa fa-pencil-square-o"></i>
-                    <span class="menu-text"> 发货明细 </span>
-                    <b class="arrow fa fa-angle-down"></b>
-                </a>
-                <b class="arrow"></b>
             </li>
             <li class="">
                 <a href="#">
